--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+  overscroll-behavior: contain;
   background-color: grey;
   margin: 0;
   width: 100%;
@@ -27,10 +28,10 @@ body {
   aspect-ratio: 3;
   padding: 20px 10px;
   display: grid;
-  grid-template-columns: repeat(60,1fr);
-  grid-template-rows: repeat(20,1fr);
+  grid-template-columns: repeat(60, 1fr);
+  grid-template-rows: repeat(20, 1fr);
 }
 
-#pacman{
+#pacman {
   width: 100%;
 }
