--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,13 @@ body {
   height: 100%;
 }
 
+.ghost {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 4;
+}
+
 #fullscreenToggler {
   background-color: #303030b3;
   background-image: url("../image/fullscreen.svg");
@@ -188,11 +195,11 @@ button {
   top: 70%;
 }
 
-#play-button:hover{
+#play-button:hover {
   background-color: #ee8700;
 }
 
-#play-button:active{
+#play-button:active {
   background-color: #ff7000;
   box-shadow: 0 0.6vw #302020;
   transform: translateY(1vw);
